# ai-quant-system

./: .dockerignore  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  P1_P2_修复说明.md  P1_功能验证指南.py  P1_验证完成报告.md  P1功能验证手册.md  QUICK_START.md  README.md  README_BACKEND_FIX.md  docker-compose.dev.yml  docker-compose.yml  env.template  pyproject.toml  requirements.txt  start_backend_local.py
backend/: __init__.py  alembic.ini
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  ai.py  backtest.py  data.py  data_sync.py  features.py  health.py  models.py  paper_trading.py  portfolio.py  strategies.py  strategies_fixed.py  websocket.py
backend/app/core/: config.py  exceptions.py
backend/app/middleware/: __init__.py  cors.py  performance.py  request_tracking.py  security.py
backend/app/schemas/: data_schemas.py
backend/app/services/: data_service.py
backend/app/tasks/: sync_tasks.py
backend/src/data/: __init__.py  akshare_adapter.py  data_validator.py
backend/src/database/: __init__.py  connection.py  crud.py  health.py  models.py
backend/src/engine/: __init__.py
backend/src/engine/backtest/: __init__.py  constraints.py  cost_model.py  metrics.py  report_generator.py  vectorbt_engine.py
backend/src/engine/features/: __init__.py  feature_store.py  indicators.py  pipeline.py
backend/src/engine/modeling/: __init__.py  model_evaluator.py  model_trainer.py  xgb_wrapper.py
backend/src/engine/portfolio/: __init__.py  optimizer.py  rebalancer.py  signal_transformer.py  weight_manager.py
backend/src/engine/utils/: __init__.py
backend/src/models/: basic_models.py  data_models.py  simple_models.py
backend/src/storage/: __init__.py  parquet_engine.py
backend/src/utils/: compression.py
data/features/processed_features/: 000001_20250907_152845_b9acc7ce.parquet  000001_20250907_153622_410c50db.parquet  000001_20250907_154406_dbf0dd4e.parquet  000001_20250907_160250_dbf0dd4e.parquet  000002_20250907_153212_b9acc7ce.parquet  000002_20250907_153622_410c50db.parquet  000002_20250907_154406_dbf0dd4e.parquet  000002_20250907_160250_dbf0dd4e.parquet  000004_20250907_152845_b9acc7ce.parquet  000004_20250907_153443_410c50db.parquet  000004_20250907_154406_dbf0dd4e.parquet  000004_20250907_160250_dbf0dd4e.parquet
docker/: README.md
docker/grafana/dashboards/: dashboard.yml
docker/grafana/datasources/: prometheus.yml
docker/postgres/: dev-init.sql  init.sql  postgresql.conf
docker/prometheus/: prometheus.yml
docker/redis/: redis-dev.conf  redis.conf
docs/: api.md  architecture.md  deployment.md  troubleshooting.md
frontend/: DEPLOYMENT_SUMMARY.md  Dockerfile  README.md  nginx.conf  vite.config.ts  vitest.config.ts
frontend/scripts/: performance-test.js
frontend/src/: App.tsx
frontend/src/components/: ApiTest.tsx  BacktestForm.tsx  BacktestHistory.tsx  BacktestResults.tsx  ChartDemo.tsx  ErrorBoundary.tsx  LoadingPage.tsx  MainLayout.tsx  PageHeader.tsx  PerformanceMonitor.tsx  QuickActions.tsx  StatusCard.tsx  SystemOverview.tsx  WebSocketIndicator.tsx  index.ts
frontend/src/components/Charts/: BarChart.tsx  BaseChart.tsx  CandlestickChart.tsx  LineChart.tsx  index.ts
frontend/src/hooks/: useResponsive.ts
frontend/src/pages/: AI.tsx  Backtest.tsx  Dashboard.tsx  DataCenter.tsx  Strategy.tsx  Trading.tsx  index.ts
frontend/src/services/: aiApi.ts  api.ts  backtestApi.ts  dataApi.ts  dataSyncApi.ts  index.ts  strategyApi.ts  websocket.ts
frontend/src/stores/: appStore.ts  backtestStore.ts  dataStore.ts  index.ts  websocketStore.ts
frontend/src/styles/: mobile.css
frontend/src/tests/: setup.ts
frontend/src/tests/performance/: basic.test.ts
frontend/src/tests/unit/: api.test.ts  components.test.tsx  quickactions.test.tsx  websocket.test.ts
frontend/src/types/: api.ts  charts.ts  index.ts
frontend/src/utils/: apiCache.ts  chartUtils.ts  index.ts  performance.ts  polling.ts
reports/: backtest_report_20250907_161023.html  pending_tasks.md
scripts/: start-dev.sh  verify_p1_dependencies.py
scripts/dev_tools/: verify_a_stock_constraints.py  verify_feature_pipeline.py  verify_indicators.py  verify_p1_apis.py  verify_report_generator.py  verify_trading_cost_model.py  verify_vectorbt_backtest.py  verify_with_real_data.py  verify_xgboost_modeling.py  简化验证指南.py
tests/: test_api.py  test_data_api.py  test_database.py  test_indicators.py  test_new_features.py  test_parquet_engine.py
tests/integration/: test_end_to_end.py
tests/performance/: test_load.py
